bugfixes for preview popover, popover towards center of screen, navbar overlapping content, and extra phantom buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,8 +25,8 @@
   background-color: #C0C0C0;
 }
 
-a:hover + .box,.box:hover{
-    display: block;
-    position: relative;
-    z-index: 100;
+.popover{
+  max-width: 550px;
 }
+
+body { padding-top: 50px; }
